# oem-storage-file

./: .gitignore  .travis.yml  LICENSE.md  requirements.txt  setup.cfg  setup.py
oem_storage_file/: collection.py  database.py  index.py  item.py  main.py  metadata.py
oem_storage_file/core/: base.py
