[metadata]
name = oem-storage-file
version = 1.0.0
author = Dean Gardiner
author-email = me@dgardiner.net
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true

[files]
packages =
  oem_storage_file

[bdist_wheel]
universal = 1

[pytest]
python_files=*_tests.py